[package]
name = "lightview"
version = "0.2.1"
edition = "2021"
authors = ["ltdt-apex"]
description = "A minimal, borderless image viewer for Wayland"
readme = "README.md"
repository = "https://github.com/ltdt-apex/lightview"
license = "MIT"
keywords = ["image-viewer", "wayland", "gtk4"]
categories = ["graphics", "gui"]
include = [
    "src/**",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[dependencies]
gtk = { version = "0.9.6", package = "gtk4" }
gdk-pixbuf = "0.20.9"
image = "0.25.2"
anyhow = "1.0"
gstreamer = "0.23.6"
gstreamer-pbutils = "0.23.5"

[[bin]]
name = "lightview"
path = "src/main.rs"
